Dark mode code block fix

--- a/src/style/githubMarkdown.css
+++ b/src/style/githubMarkdown.css
@@ -969,6 +969,10 @@
   border-radius: 6px;
 }
 
+.dark pre {
+  background-color: black !important;
+}
+
 .markdown-body pre code,
 .markdown-body pre tt {
   display: inline;
